3.1.0/_sources/gallery/misc/coords_report.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_misc_coords_report.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_misc_coords_report.py:


=============
Coords Report
=============

Override the default reporting of coords.


.. image:: /gallery/misc/images/sphx_glr_coords_report_001.png
    :class: sphx-glr-single-img





.. code-block:: default


    import matplotlib.pyplot as plt
    import numpy as np


    def millions(x):
        return '$%1.1fM' % (x*1e-6)


    # Fixing random state for reproducibility
    np.random.seed(19680801)

    x = np.random.rand(20)
    y = 1e7*np.random.rand(20)

    fig, ax = plt.subplots()
    ax.fmt_ydata = millions
    plt.plot(x, y, 'o')

    plt.show()


.. _sphx_glr_download_gallery_misc_coords_report.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: coords_report.py <coords_report.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: coords_report.ipynb <coords_report.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
